--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
         "svelte": "^3.55.1",
         "tailwindcss": "^3.2.7",
         "vite": "^4.1.0"
+    },
+    "dependencies": {
+        "@floating-ui/dom": "^1.4.5",
+        "axios": "^1.3.4",
+        "date-fns": "^2.30.0",
+        "flowbite": "^1.7.0",
+        "flowbite-svelte": "^0.40.2",
+        "svelte-routing": "^2.0.0",
+        "tailwind-merge": "^1.14.0"
     }
 }
