--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.21",
         "svelte": "^3.55.1",
+        "svelte-check": "^3.4.6",
         "tailwindcss": "^3.2.7",
         "vite": "^4.1.0"
     },
