change build command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "routify -c dev:vite ",
-        "build": "svelte-check && routify -b && vite build",
+        "build": "routify -b && svelte-check && vite build",
         "dev:vite": "vite",
         "serve": "vite preview",
         "validate": "svelte-check"
